--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
 requests
 python-dotenv
 supabase
+shap
+tensorflow
+numpy
+pandas
+scikit-learn
+matplotlib
+stable-baselines3
+gymnasium
+matplotlib
